Initial manager functionality

--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -181,7 +181,7 @@
 					</div>
 
 					<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-						<li class="text-center"><a href="#booking">BOOKING</a></li>
+						<li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
 					</div>
 
 					<div class="nav nav-pills col-lg-2 col-md-2 col-sm-2 col-xs-2" id="profile-indicator">
