--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -127,7 +127,7 @@ body, html {
         </div>
 
         <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <li class="text-center"><a href="#booking">BOOKING</a></li>
+            <li class="text-center"><a href="rooms/pricing">PRICING</a></li>
         </div>
 
         <% if(userData != 'undefined') { %>
