--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -10,7 +10,16 @@
 	<!-- Set the page to the width of the device and set the zoon level -->
 	<meta name="viewport" content="width = device-width, initial-scale = 1">
 	<title>Hotel Management System - Accommodation</title>
+	<!--  jQuery -->
+	<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css" rel="stylesheet"/>
+
+	<!-- Bootstrap Date-Picker Plugin -->
+	
 
 	<style>
 		body,
@@ -36,6 +45,13 @@
 
 		.booking-details {
 			font-size: 15px;
+		}
+
+		.clickable-rooms {
+			background-color: rgb(179, 0, 0);
+			text-align: center;
+			font-size: 35px;
+			color: black;
 		}
 
 		.glyphicon.glyphicon-home {
@@ -118,10 +134,11 @@
 			margin-top: 100px;
 		}
 
+		#dropdown_type,
 		#dropdown_adult,
 		#dropdown_children {
 			margin-right: 30px;
-			width: 30%;
+			width: 40%;
 		}
 
 		#home-navbar {
@@ -194,7 +211,7 @@
 					</div>
 
 					<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-						<li class="text-center"><a href="#booking">BOOKING</a></li>
+						<li class="text-center"><a href="pricing">PRICING</a></li>
 					</div>
 
 					<% if(userData != 'undefined') { %>
@@ -237,22 +254,40 @@
 													<div class="input-group-addon">
 														Check-in
 													</div>
-													<input class="form-control" id="date_checkin" name="date_checkin"
-														placeholder="DD/MM/YYYY" type="text" />
-													<div class="input-group-addon">
-														<span class="glyphicon glyphicon-calendar"></span>
+													<div class="form-group" style="height: 5px">
+														<div class='input-group date' id='datetimepicker1'>
+															<input type='text' class="form-control" name="date_checkin" placeholder="DD/MM/YYYY" onkeydown="return false" />
+															<span class="input-group-addon">
+																<span class="glyphicon glyphicon-calendar"></span>
+															</span>
+														</div>
 													</div>
 												</div>
 												<div class="input-group">
 													<div class="input-group-addon">
 														Check-out
 													</div>
-													<input class="form-control" id="date_checkout" name="date_checkout"
-														placeholder="DD/MM/YYYY" type="text" />
-													<div class="input-group-addon">
-														<span class="glyphicon glyphicon-calendar"></span>
+													<div class="form-group" style="height: 5px">
+														<div class='input-group date' id='datetimepicker2'>
+															<input type='text' class="form-control" name="date_checkout" placeholder="DD/MM/YYYY" onkeydown="return false" />
+															<span class="input-group-addon">
+																<span class="glyphicon glyphicon-calendar"></span>
+															</span>
+														</div>
 													</div>
 												</div>
+												<p class="text-right">
+													<div class="form-group row" id="typeInput">
+														<select class="form-control pull-right" id="dropdown_type"
+															name="dropdown_type">
+															<option disabled>Room Type
+															</option>
+															<option>Standard</option>
+															<option>Ocean View</option>
+															<option>Deluxe</option>
+														</select>
+													</div>
+												</p>
 												<p class="text-right">
 													<div class="form-group row">
 														<select class="form-control pull-right" id="dropdown_adult"
@@ -294,11 +329,42 @@
 					</div>
 					<% include ./partials/messages %>
 				</div>
-				<% } else if (userType == 'receptionist') { %>
+				<% } else if (userType == 'receptionist' || userType == 'manager') { %>
 				<% if(typeof roomsArray != 'undefined' && roomsArray.length > 0) { %>
+				<p hidden id="roomsCount"><%= roomsArray.length %></p>
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-lg-1"></div>
+						<div class="col-lg-2">
+							<div class="container-fluid">
+								<div id="roominfo">
+									<p class="h3 text-center" style="background-color: white">Reservations</p>
+									<div class="row">
+										<form role="form" id="roomInfo-form" action="/rooms/roomInformation" method="POST">
+											<div class="col-lg-8">
+												<input type="text" class="form-control" placeholder="Room Number" id="thisRoomID" name="thisRoomID">
+											</div>
+											<div class="col-lg-4">
+												<button type="submit" class="btn btn-primary" id="roomInfo-btn">Check</button>
+											</div>
+										</form>
+									</div>
+									<% if(typeof reservationsMap != 'undefined') { %>
+										<table style="width:100%">
+											<tr>
+												<th class="text-center">Date in</th>
+												<th class="text-center">Date out</th>
+											</tr>
+										<% reservationsMap.forEach(function(key, value) { %>
+											<tr>
+												<td class="text-center"><%= value %></td>
+												<td class="text-center"><%= key %></td>
+											</tr>
+										<% }) %>
+										</table>
+									<% } %>
+								</div>
+							</div>
+						</div>
 						<div class="col-lg-7">
 							<div class="container-fluid">
 								<div class="row">
@@ -313,14 +379,14 @@
 										<div class="col-lg-2">
 											<% if(room.status == 'unavailable') { %>
 											<div class="container-fluid room-component" style="background-color:rgb(179, 0, 0)">
-												<div class="row">
-													<p class="text-center"><%= room.id %></p>
+												<div class="row text-center">
+													<%= room.id %>
 												</div>
 											</div>
 											<% } else { %>
-											<div class="container-fluid room-component" style="background-color: green">
-												<div class="row">
-													<p class="text-center"><%= room.id %></p>
+											<div class="container-fluid room-component" style="background-color:green">
+												<div class="row text-center">
+													<%= room.id %>
 												</div>
 											</div>
 											<% } %>
@@ -350,12 +416,13 @@
 											<p class="booking-details">*Date in*: </p class="booking-details">
 										</div>
 										<div class="col-lg-8">
-											<div class="input-group datepicker1">
-												<input class="form-control" id="date_checkin" name="date_checkin"
-													placeholder="DD/MM/YYYY" type="text" />
-												<span class="input-group-addon btn" for="date_checkin">
-													<span class="glyphicon glyphicon-calendar"></span>
-												</span><br>
+											<div class="form-group" style="height: 5px">
+												<div class='input-group date' id='datetimepicker3'>
+													<input type='text' class="form-control" name="date_checkin" placeholder="DD/MM/YYYY" onkeydown="return false" />
+													<span class="input-group-addon">
+														<span class="glyphicon glyphicon-calendar"></span>
+													</span>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -364,12 +431,13 @@
 											<p class="booking-details">*Date out*: </p class="booking-details">
 										</div>
 										<div class="col-lg-8">
-											<div class="input-group datepicker2">
-												<input class="form-control" id="date_checkout" name="date_checkout"
-													placeholder="DD/MM/YYYY" type="text" />
-												<span class="input-group-addon btn" for="date_checkin">
-													<span class="glyphicon glyphicon-calendar"></span>
-												</span><br>
+											<div class="form-group" style="height: 5px">
+												<div class='input-group date' id='datetimepicker4'>
+													<input type='text' class="form-control" name="date_checkin" placeholder="DD/MM/YYYY" onkeydown="return false" />
+													<span class="input-group-addon">
+														<span class="glyphicon glyphicon-calendar"></span>
+													</span>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -399,7 +467,8 @@
 										</div>
 									</div>
 									<div class="row text-center">
-										<button type="submit" class="btn btn-primary" id="book-btn" >Book Room</button>
+										<input type="hidden" id="numberOfRooms" name="numberOfRooms">
+										<button type="submit" class="btn btn-primary" id="book-btn" onclick="return beforeSubmit3()">Book Room</button>
 									</div>
 									<div class="row text-center">
 										<% include ./partials/messages %>
@@ -407,7 +476,6 @@
 								</form>
 							</div>
 						</div>
-						<div class="col-lg-1"></div>
 					</div>
 				</div>
 				<% } %>
@@ -436,9 +504,9 @@
 								</div>
 								<div class="col-lg-6">
 									<div class="row"> <p class="roomInfo" id="capacity"><%= dropdown_adult + dropdown_children %></p> </div>
-									<div class="row"> <p class="roomInfo" id="price"><%= (Math.ceil(Math.abs(date_checkout - date_checkin) / (1000 * 60 * 60 * 24))) * (dropdown_adult * 50 + dropdown_children * 25) %>&euro;</p> </div>
-									<div class="row"> <p class="roomInfo" id="checkin"><%= date_checkin.getFullYear() + "/" + (date_checkin.getMonth() + 1) + "/" +  date_checkin.getDate() %></p> </div>
-									<div class="row"> <p class="roomInfo" id="checkout"><%= date_checkout.getFullYear() + "/" + (date_checkout.getMonth() + 1) + "/" +  date_checkout.getDate() %></p> </div>
+									<div class="row"> <p class="roomInfo" id="price"><%= (Math.ceil(Math.abs(date_checkout - date_checkin) / (1000 * 60 * 60 * 24))) * (dropdown_adult * rooms[0].price_adult + dropdown_children * rooms[0].price_child) %>&euro;</p> </div>
+									<div class="row"> <p class="roomInfo" id="checkin"><%= date_checkin.getDate() + "/" + (date_checkin.getMonth() + 1) + "/" +  date_checkin.getFullYear() %></p> </div>
+									<div class="row"> <p class="roomInfo" id="checkout"><%= date_checkout.getDate() + "/" + (date_checkout.getMonth() + 1) + "/" +  date_checkout.getFullYear() %></p> </div>
 								</div>
 								<div class="row">
 									<td class="text-center">
@@ -470,60 +538,64 @@
 
 	</div>
 
-	<!--  jQuery -->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-	<!-- Bootstrap Date-Picker Plugin -->
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-	<link rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
-
 	<!-- Datepicker functionality-->
 	<script>
-		$('.datepicker1').click(
-			function () {
-					$(this).datepicker('show');
-			}
-		);
+		var dateNow = new Date()
+		var currentTime = dateNow.getHours()
+		if(currentTime < 12) {
+			$('#datetimepicker1').datetimepicker({
+				format: 'YYYY/MM/DD',
+				minDate: moment().millisecond(0).second(0).minute(0).hour(0)
+			})
+		} else {
+			$('#datetimepicker1').datetimepicker({
+				format: 'YYYY/MM/DD',
+				minDate: moment().add(1, "days").millisecond(0).second(0).minute(0).hour(0)
+			})
+		}
+		
+
+		if(currentTime < 12) {
+			$('#datetimepicker2').datetimepicker({
+				format: 'YYYY/MM/DD',
+				minDate: moment().millisecond(0).second(0).minute(0).hour(0)
+			})
+		} else {
+			$('#datetimepicker2').datetimepicker({
+				format: 'YYYY/MM/DD',
+				minDate: moment().add(1, "days").millisecond(0).second(0).minute(0).hour(0)
+			})
+		}
+
+		$('#datetimepicker1').on("dp.change", function(e) {
+			$('#datetimepicker2').data("DateTimePicker").minDate(e.date);
+		})
+
+		$('#datetimepicker2').on("dp.change", function (e) {
+			$('#datetimepicker1').data("DateTimePicker").maxDate(e.date);
+		});
 	</script>
 	<script>
-		$(document).ready(function () {
-			var date_input = $('input[name="date"]'); //our date input has the name "date"
-			var container = $('.bootstrap-iso form').length > 0 ? $('.bootstrap-iso form').parent() : "body";
-			var options = {
-				dateFormat: 'yyyy/mm/dd',
-				container: container,
-				autoclose: true,
-			};
-			date_input.datepicker(options);
+		var dateNow = new Date()
+		var currentTime = dateNow.getHours()
+		$('#datetimepicker3').datetimepicker({
+			format: 'YYYY/MM/DD',
+			minDate: moment().millisecond(0).second(0).minute(0).hour(0)
 		})
-	</script>
-	<script>
-		$(document).ready(function () {
-			$('#date_checkin').datepicker({
-				orientation: "auto",
-				startDate: "+1d",
-				dateFormat: 'yyyy/mm/dd'
-			}).on('changeDate', function (selected) {
-				selected.date.setDate(selected.date.getDate() + 1);
-				var minDate = new Date(selected.date.valueOf());
-				$('#date_checkout').datepicker('setStartDate', minDate);
-			});
+
+		$('#datetimepicker4').datetimepicker({
+			format: 'YYYY/MM/DD',
+			minDate: moment().millisecond(0).second(0).minute(0).hour(0),
+			useCurrent: false
 		})
-	</script>
-	<script>
-		$(document).ready(function () {
-			$('#date_checkout').datepicker({
-				orientation: "auto",
-				startDate: "+1d",
-				dateFormat: 'yyyy/mm/dd'
-			}).on('changeDate', function (selected) {
-				selected.date.setDate(selected.date.getDate() - 1);
-				var maxDate = new Date(selected.date.valueOf());
-				$('#date_checkin').datepicker('setEndDate', maxDate);
-			});
+
+		$('#datetimepicker3').on("dp.change", function(e) {
+			$('#datetimepicker4').data("DateTimePicker").minDate(e.date);
 		})
+
+		$('#datetimepicker4').on("dp.change", function (e) {
+			$('#datetimepicker3').data("DateTimePicker").maxDate(e.date);
+		});
 	</script>
 
 	<!-- Set the data for the hidden inputs -->
@@ -535,6 +607,21 @@
 		}
 	</script>
 
+	<!-- Set the data for the hidden inputs -->
+	<script>
+		function beforeSubmit2() {
+			document.getElementById('thisRoomID').value = document.getElementById('roomID').innerText
+			document.getElementById('thisRoomCap').value = document.getElementById('roomCap').innerText
+		}
+	</script>
+
+	<!-- Set the data for the hidden inputs -->
+	<script>
+		function beforeSubmit3() {
+			document.getElementById('numberOfRooms').value = document.getElementById('roomsCount').innerText
+		}
+	</script>
+
 	<!-- Submit both forms with one button -->
 	<script>
 		submitForms = function () {
@@ -543,10 +630,6 @@
 		}
 	</script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.2/sweetalert2.all.min.js"></script>
 </body>
 
 </html>
