--- a/app/views/pricing.ejs
+++ b/app/views/pricing.ejs
@@ -163,7 +163,7 @@ body, html {
         <div class="row">
             <div class="col-lg-8">
                 <h2 style="text-align: center; color: black;">Rooms</h2>
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
